Created feature to upload proposals

--- a/abc-corp-website/index.html
+++ b/abc-corp-website/index.html
@@ -26,8 +26,17 @@
 </head>
 <body>
   <header>
-    <h1>ABC Corp — Proposals</h1>
-    <p style="margin:0;color:var(--muted);font-size:.95rem">Browse, preview, and download proposals published by ABC Corp.</p>
+    <div style="display:flex;justify-content:space-between;align-items:center">
+      <div>
+        <h1>ABC Corp — Proposals</h1>
+        <p style="margin:0;color:var(--muted);font-size:.95rem">Browse, preview, and download proposals published by ABC Corp.</p>
+      </div>
+      <div>
+        <a href="upload.html" style="background:var(--accent);color:#fff;padding:0.45rem 0.75rem;border-radius:6px;text-decoration:none;font-weight:600">Upload Proposal</a>
+      </div>
+    </div>
+    <!-- <p style="margin:0;color:var(--muted);font-size:.95rem">Browse, preview, and download proposals published by ABC Corp.</p>
+-->
   </header>
 
   <div class="container">
